--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     ]
   },
   "devDependencies": {
+    "cors": "^2.8.5",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "express": "^4.17.1",
     "prettier": "^2.4.1",
     "prettier-airbnb-config": "^1.0.0"
   }
